<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">Quiz</string>
    <string name="your_name">Your name</string>
    <string name="get_started">GET STARTED</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="quiz_time">Quiz time</string>
    <string name="profile">Profile</string>
    <string name="list_of_questions">List of questions</string>
    <string name="new_question">New question</string>
    <string name="read_questions">Read questions</string>
    <string name="test_your_skills">Test your skills</string>
    <string name="create_question">Create question</string>
    <string name="enjoy_the_quiz_app_where_you_can">Enjoy the quiz app, where you can:</string>
    <string name="player_name">Player name:</string>
    <string name="high_score">High score:</string>
    <string name="next">Next</string>
    <string name="quiz_result">Quiz result</string>
    <string name="try_again">Try again</string>
    <string name="menu_options">Menu options</string>
    <string name="enjoy_the_quiz">Enjoy the quiz</string>
    <string name="add_question">Add question</string>


    <string-array name="category_array">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals&amp;Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Kotlin fundamentals</item>
        <item>Android</item>
    </string-array>

</resources>